--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>My Website</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, ut.</p>
 </body>
 </html>
